// Copyright (c) YugaByte, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
// in compliance with the License.  You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License
// is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
// or implied.  See the License for the specific language governing permissions and limitations
// under the License.
//
syntax = "proto3";

package yb.docdb;

option java_package = "org.yb.docdb";

// Information about added chunk.
// Currently it contains only chunk serial no, but could contain some extra data in future.
message VectorLSMChunk {
  uint64 serial_no = 1;
}

message VectorLSMUpdate {
  // When reset is true, all previous updates should be ignored.
  bool reset = 1;

  // Chunks could be added and removed within the single update.
  // But the same chunk cannot be added and removed within the single update.
  repeated VectorLSMChunk add_chunks = 2;
  repeated uint64 remove_chunks = 3;
}
